@@ -6,7 +6,7 @@
 Given a vector of genes, this function will return the enrichment GO
 categories after FDR control.}
 \usage{
-enrichGO(gene, OrgDb, keytype = "ENTREZID", ont = "MF",
+enrichGO(gene, OrgDb, keyType = "ENTREZID", ont = "MF",
   pvalueCutoff = 0.05, pAdjustMethod = "BH", universe, qvalueCutoff = 0.2,
   minGSSize = 10, maxGSSize = 500, readable = FALSE, pool = FALSE)
 }
@@ -15,7 +15,7 @@ enrichGO(gene, OrgDb, keytype = "ENTREZID", ont = "MF",
 
 \item{OrgDb}{OrgDb}
 
-\item{keytype}{keytype of input gene}
+\item{keyType}{keytype of input gene}
 
 \item{ont}{One of "MF", "BP", and "CC" subontologies.}
 
